# ustc-wakeup

./: .gitignore  README.md  WakeupWriter.py  XmlReader.py  color.py  data_parse.py  jw.py  main.py  pyproject.toml  ustc_cas.py
src/ustcwakeup/: __init__.py  cli.py  course_table.py  data_parse.py  frontend.py  jw.py  ustc_cas.py  wakeup.py
src/ustcwakeup/backend/: __init__.py  ical.py  wakeup.py
src/ustcwakeup/frontend/: __init__.py  main.py  network.py  parser.py  ustc_cas.py
